# taste-paradise

./: .gitignore  README.md  manage.py  pyproject.toml
account/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_profile_avatar.py  0003_alter_profile_avatar.py  0004_alter_profile_avatar.py  0005_alter_profile_user.py
account/templates/account/: change_password.html  change_password_done.html  login.html  profile.html  profile_edit.html  register.html
account/templatetags/: profile_tags.py
receips/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
receips/migrations/: 0001_initial.py  0002_receipe_user_likes_remove_receipe_author_and_more.py  0003_alter_receipe_category.py  0004_alter_receipe_user_likes.py  0005_alter_receipe_image_alter_receipe_tags.py  0006_alter_receipe_slug_alter_receipe_tags.py  0007_alter_receipe_slug.py  0008_category_image_receipe_servings.py  0009_alter_receipe_servings.py
receips/templates/receips/: add_receipe.html  index.html  receipe_detail.html  receipes.html
receips/templates/receips/inc/: _pagination.html  _profile_receips.html  _search.html
receips/templatetags/: aside_tags.py
static/css/: _pagination.css  _profile_receips.css  _search.css  account.css  add_receipe.css  catalog.css  categories.css  footer.css  header.css  layout.css  main.css  profile.css  receipe_detail.css  recipes.css
taste_paradise/: .env  asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
